feat: 实现JWT工具类

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 logging.level.org.springframework.security=DEBUG
+
+spring.app.jwtSecret=${JWT_SECRET}
+spring.app.jwtExpirationMs=172800000
