--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ logging.level.org.springframework.security=DEBUG
 
 spring.app.jwtSecret=${JWT_SECRET}
 spring.app.jwtExpirationMs=172800000
+
+frontend.url=http://localhost:3000
