feat: 电子邮件功能

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,11 @@ logging.level.org.springframework.security=DEBUG
 spring.app.jwtSecret=${JWT_SECRET}
 spring.app.jwtExpirationMs=172800000
 
+spring.mail.host=${SPRING_MAIL_HOST}
+spring.mail.port=${SPRING_MAIL_PORT}
+spring.mail.username=${SPRING_MAIL_USERNAME}
+spring.mail.password=${SPRING_MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 frontend.url=http://localhost:3000
