--- a/project-security/src/main/resources/application.properties
+++ b/project-security/src/main/resources/application.properties
@@ -73,7 +73,7 @@ springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 
 # Logging
-logging.file.name=logs/${spring.application.name}/app.log
+#logging.file.name=logs/${spring.application.name}/app.log
 #logging.level.org.hibernate.orm.jdbc.bind=TRACE
 #logging.level.org.springframework.security=DEBUG
 #logging.level.com.secure.security=DEBUG
@@ -94,8 +94,8 @@ spring.main.allow-bean-definition-overriding=true
 spring.security.oauth2.client.registration.github.client-name=github
 spring.security.oauth2.client.registration.github.client-id=${GITHUB_CLIENT_ID}
 spring.security.oauth2.client.registration.github.client-secret=${GITHUB_CLIENT_SECRET}
-spring.security.oauth2.client.registration.github.scope=read:user,user:email
 spring.security.oauth2.client.registration.github.redirect-uri=${OAUTH2_CLIENT_REGISTRATION_GITHUB_REDIRECT_URI}
+spring.security.oauth2.client.registration.github.scope=read:user,user:email
 
 # Google OAuth2 configuration
 spring.security.oauth2.client.registration.google.client-name=google
