--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ ext {
     set('jspecifyVersion', "1.0.0")
     set('flywayVersion', "11.18.0")
     set('lombokVersion', "1.18.42")
+    set('cosidStarterVersion', "3.0.0")
     set('cosidVersion', "2.15.1")
 }
 
@@ -56,8 +57,8 @@ subprojects {
         implementation "com.warrenstrange:googleauth:${googleauthVersion}"
         implementation "org.jspecify:jspecify:${jspecifyVersion}"
 
-        implementation "me.ahoo.cosid:cosid-spring-boot-starter:3.0.0"
-        implementation "me.ahoo.cosid:cosid-spring-redis:$cosidVersion"
+        implementation "me.ahoo.cosid:cosid-spring-boot-starter:${cosidStarterVersion}"
+        implementation "me.ahoo.cosid:cosid-spring-redis:${cosidVersion}"
 
         compileOnly "org.projectlombok:lombok"
         annotationProcessor "org.projectlombok:lombok"
