--- a/project-security/build.gradle
+++ b/project-security/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     runtimeOnly "org.flywaydb:flyway-database-postgresql"
     implementation "org.springframework.boot:spring-boot-starter-data-redis"
     implementation "org.springframework.boot:spring-boot-starter-cache"
+    implementation "org.redisson:redisson"
     implementation "me.ahoo.cosid:cosid-spring-boot-starter"
     implementation "me.ahoo.cosid:cosid-spring-redis"
     implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui"
