--- a/project-security/src/main/resources/application.properties
+++ b/project-security/src/main/resources/application.properties
@@ -35,7 +35,7 @@ spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Shanghai
 #spring.jpa.properties.hibernate.connection.url=${SPRING_DATASOURCE_URL}
 #spring.jpa.properties.hibernate.connection.username=${SPRING_DATASOURCE_USERNAME}
