--- a/project-security/src/main/resources/application.properties
+++ b/project-security/src/main/resources/application.properties
@@ -37,15 +37,20 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Shanghai
-#spring.jpa.properties.hibernate.connection.url=${SPRING_DATASOURCE_URL}
-#spring.jpa.properties.hibernate.connection.username=${SPRING_DATASOURCE_USERNAME}
-#spring.jpa.properties.hibernate.connection.password=${SPRING_DATASOURCE_PASSWORD}
-#spring.jpa.properties.hibernate.connection.driver_class=${spring.datasource.type}
+#spring.jpa.properties.hibernate.connection.url=${spring.datasource.url}
+#spring.jpa.properties.hibernate.connection.username=${spring.datasource.username}
+#spring.jpa.properties.hibernate.connection.password=${spring.datasource.password}
+#spring.jpa.properties.hibernate.connection.driver_class=${spring.datasource.driver-class-name}
 spring.jpa.properties.jakarta.persistence.schema-generation.create-source=metadata
 spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=create
 spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=build/schema.sql
 
 # Flyway
+spring.flyway.url=${spring.datasource.url}
+spring.flyway.user=${spring.datasource.username}
+spring.flyway.password=${spring.datasource.password}
+spring.flyway.driver-class-name=${spring.datasource.driver-class-name}
+spring.flyway.baseline-on-migrate=true
 spring.flyway.enabled=true
 spring.flyway.table=sys_flyway_history
 spring.flyway.locations=classpath:db/authentication
@@ -55,18 +60,15 @@ cosid.namespace=${spring.application.name}
 cosid.machine.enabled=true
 cosid.machine.distributor.type=redis
 cosid.machine.guarder.enabled=true
-
 cosid.snowflake.enabled=true
 cosid.snowflake.zone-id=Asia/Shanghai
 cosid.snowflake.epoch=1288834974657
 cosid.snowflake.share.clock-sync=true
 cosid.snowflake.share.converter.friendly.pad-start=true
-
 cosid.snowflake.provider.short_id.converter.prefix=
 cosid.snowflake.provider.short_id.converter.type=radix
 cosid.snowflake.provider.short_id.converter.radix.char-size=11
 cosid.snowflake.provider.short_id.converter.radix.pad-start=false
-
 cosid.snowflake.provider.safe-js.machine-bit=3
 cosid.snowflake.provider.safe-js.sequence-bit=9
 
