--- a/project-security/src/main/resources/application.properties
+++ b/project-security/src/main/resources/application.properties
@@ -114,3 +114,5 @@ spring.proxy.port=${PROXY_PORT}
 # Actuator
 management.endpoints.web.exposure.include=health,info
 management.endpoints.web.base-path=/actuator
+
+spring.jooq.sql-dialect=POSTGRES
