--- a/project-security/src/main/resources/application.properties
+++ b/project-security/src/main/resources/application.properties
@@ -17,6 +17,14 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 
+# Pageable
+spring.data.web.pageable.one-indexed-parameters=true
+spring.data.web.pageable.default-page-size=6
+spring.data.web.pageable.max-page-size=20
+spring.data.web.pageable.page-parameter=page
+spring.data.web.pageable.size-parameter=size
+spring.data.web.sort.sort-parameter=sort
+
 # Redis
 spring.data.redis.host=${SPRING_REDIS_HOST}
 spring.data.redis.port=${SPRING_REDIS_PORT}
