--- a/project-security/src/main/resources/application.properties
+++ b/project-security/src/main/resources/application.properties
@@ -19,6 +19,7 @@ spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 
 # Pageable
 spring.data.web.pageable.one-indexed-parameters=true
+spring.data.web.pageable.serialization-mode=via_dto
 spring.data.web.pageable.default-page-size=6
 spring.data.web.pageable.max-page-size=20
 spring.data.web.pageable.page-parameter=page
