--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,17 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '4.0.1' apply false
-    id 'io.spring.dependency-management' version '1.1.7' apply false
+    id 'org.springframework.boot' version '4.0.1'
+    id 'io.spring.dependency-management' version '1.1.7'
 }
+
+group = 'com.spring.security'
+version = '1.0.0-SNAPSHOT'
+description = 'project-security'
 
 repositories {
     mavenCentral()
-}
-
-allprojects {
-
-    repositories {
-        mavenCentral()
-        maven { url 'https://repo.spring.io/milestone' }
-    }
-
+    flatDir { dirs 'libs' }
+    maven { url 'https://repo.spring.io/milestone' }
 }
 
 ext {
@@ -23,7 +20,6 @@ ext {
     set('commonsLangVersion', "3.20.0")
     set('jjwtVersion', "0.13.0")
     set('postgresqlVersion', "42.7.8")
-    set('googleauthVersion', "1.5.0")
     set('hutoolVersion', "5.8.41")
     set('jspecifyVersion', "1.0.0")
     set('flywayVersion', "11.19.0")
@@ -33,44 +29,36 @@ ext {
     set('jooqVersion', "3.20.10")
 }
 
-subprojects {
+dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    implementation "org.springframework.boot:spring-boot-starter-flyway"
+    runtimeOnly "org.flywaydb:flyway-database-postgresql:${flywayVersion}"
+    implementation "org.springframework.boot:spring-boot-starter-data-redis"
+    implementation "org.springframework.boot:spring-boot-starter-cache"
+    implementation "org.redisson:redisson:${redissonVersion}"
+    implementation "me.ahoo.cosid:cosid-spring-boot-starter:${cosidVersion}"
+    implementation "me.ahoo.cosid:cosid-spring-redis:${cosidVersion}"
+    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springdocVersion}"
+    implementation "org.apache.commons:commons-lang3:${commonsLangVersion}"
+    implementation "io.jsonwebtoken:jjwt-api:${jjwtVersion}"
+    runtimeOnly "io.jsonwebtoken:jjwt-impl:${jjwtVersion}"
+    runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jjwtVersion}"
+    runtimeOnly "org.postgresql:postgresql:${postgresqlVersion}"
+    implementation "org.jspecify:jspecify:${jspecifyVersion}"
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
 
-    apply plugin: 'java'
-    apply plugin: 'io.spring.dependency-management'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
 
-    java {
-        toolchain {
-            languageVersion = JavaLanguageVersion.of(25)
-        }
-        sourceCompatibility = JavaVersion.VERSION_25
-        targetCompatibility = JavaVersion.VERSION_25
-    }
-
-    dependencies {
-        runtimeOnly "org.flywaydb:flyway-database-postgresql:${flywayVersion}"
-        implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springdocVersion}"
-        implementation "org.apache.commons:commons-lang3:${commonsLangVersion}"
-        implementation "org.redisson:redisson:${redissonVersion}"
-        implementation "io.jsonwebtoken:jjwt-api:${jjwtVersion}"
-        runtimeOnly "io.jsonwebtoken:jjwt-impl:${jjwtVersion}"
-        runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jjwtVersion}"
-        runtimeOnly "org.postgresql:postgresql:${postgresqlVersion}"
-        implementation "cn.hutool:hutool-core:${hutoolVersion}"
-        implementation "com.warrenstrange:googleauth:${googleauthVersion}"
-        implementation "org.jspecify:jspecify:${jspecifyVersion}"
-        implementation "org.jooq:jooq:${jooqVersion}"
-
-        implementation "me.ahoo.cosid:cosid-spring-boot-starter:${cosidVersion}"
-        implementation "me.ahoo.cosid:cosid-spring-redis:${cosidVersion}"
-        compileOnly "org.projectlombok:lombok"
-        annotationProcessor "org.projectlombok:lombok"
-    }
-
-//    configurations.all {
-//        exclude group: "com.fasterxml.jackson.core"
-//        exclude group: "com.fasterxml.jackson.databind"
-//        exclude group: "com.fasterxml.jackson.dataformat"
-//        exclude group: "com.fasterxml.jackson.module"
-//    }
-
+tasks.withType(Test).configureEach {
+    useJUnitPlatform()
 }
