feat: 新增 SpringAi 依赖

--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ ext {
     set('flywayVersion', "11.19.0")
     set('lombokVersion', "1.18.42")
     set('redissonVersion', "4.0.0")
+    set('springAiVersion', "2.0.0-M2")
 }
 
 dependencies {
@@ -50,9 +51,20 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
+    implementation 'org.springframework.ai:spring-ai-starter-model-openai'
+    implementation 'org.springframework.ai:spring-ai-starter-model-deepseek'
+    implementation 'org.springframework.ai:spring-ai-starter-model-google-genai'
+    implementation 'org.springframework.ai:spring-ai-starter-model-vertex-ai-gemini'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
+    }
 }
 
 tasks.withType(Test).configureEach {
