--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -97,3 +97,13 @@ spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_
 # Actuator
 management.endpoints.web.exposure.include=health,info
 management.endpoints.web.base-path=/actuator
+
+# OpenAi
+spring.ai.openai.api-key=${OPENAI_API_KEY}
+spring.ai.openai.base-url=${OPENAI_BASE_URL}
+spring.ai.openai.chat.options.model=${OPENAI_CHAT_MODEL}
+
+# DeepSeek
+spring.ai.deepseek.api-key=${DEEPSEEK_API_KEY}
+spring.ai.deepseek.base-url=${DEEPSEEK_BASE_URL}
+spring.ai.deepseek.chat.options.model=${DEEPSEEK_CHAT_MODEL}
